--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ colored = "2.0.0"
 dirs = "5.0.1"
 once_cell = "1.18.0"
 serde_json = "1.0.99"
+tabled = { version = "0.12.2", default-features = false, features = ["std"] }
