--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,11 @@
 [package]
 name = "markd"
+description = "Bookmark directories for easy directory-hopping in the terminal"
+repository = 'https://github.com/voltaireNoir/markd'
+categories = ["command-line-utilities", "filesystem", "development-tools"]
+keywords = ["cli", "utility", "bookmark", "cd", "terminal", "directories"]
+authors = ["Maaz Ahmed <mzahmed95@gmail.com>"]
+license = "MIT"
 version = "0.1.0"
 edition = "2021"
 exclude = ["*.png"]
@@ -14,3 +20,9 @@ dirs = "5.0.1"
 once_cell = "1.18.0"
 serde_json = "1.0.99"
 tabled = { version = "0.12.2", default-features = false, features = ["std"] }
+
+[profile.release]
+strip = true
+lto = true
+panic = "abort"
+codegen-units = 1
