--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "Bookmark directories for easy directory-hopping in the terminal"
 repository = 'https://github.com/voltaireNoir/markd'
 documentation = "https://github.com/VoltaireNoir/markd/tree/main#readme"
 categories = ["command-line-utilities", "filesystem", "development-tools"]
-keywords = ["cli", "utility", "bookmark", "cd", "terminal", "directories"]
+keywords = ["cli", "bookmark", "cd", "terminal", "directories"]
 authors = ["Maaz Ahmed <mzahmed95@gmail.com>"]
 license = "MIT"
 version = "0.1.0"
