--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ dirs = "5.0.1"
 once_cell = "1.18.0"
 serde_json = "1.0.99"
 tabled = { version = "0.12.2", default-features = false, features = ["std"] }
+toml = "0.8.6"
 
 [profile.release]
 strip = true
